--- a/src/main/resources/assets/subwaysurfers/lang/en_us.json
+++ b/src/main/resources/assets/subwaysurfers/lang/en_us.json
@@ -3,5 +3,6 @@
   "block.subwaysurfers.bottom_barrier": "Bottom Barrier",
   "block.subwaysurfers.top_barrier": "Top Barrier",
   "block.subwaysurfers.subway_rail": "Rail",
-  "item.subwaysurfers.hoverboard": "Hoverboard"
+  "item.subwaysurfers.hoverboard": "Hoverboard",
+  "item.subwaysurfers.builder": "Builder Util"
 }
