refactor(client&server): rework collectible/powerup system (WIP)

--- a/src/main/resources/assets/subwaysurfers/lang/en_us.json
+++ b/src/main/resources/assets/subwaysurfers/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.subwaysurfers.trafficlight": "Traffic Light",
   "entity.subwaysurfers.train": "Train",
   "item.subwaysurfers.hoverboard": "Hoverboard",
+  "item.subwaysurfers.jetpack": "Jetpack",
   "item.subwaysurfers.builder": "Builder Util",
   "ui.gameover.gameover": "GAME OVER!!!",
   "ui.gameover.score": "Score",
