feature(client): show track update message <https://github.com/copyandexecute/subwaysurfers/issues/22>

--- a/src/main/resources/assets/subwaysurfers/lang/en_us.json
+++ b/src/main/resources/assets/subwaysurfers/lang/en_us.json
@@ -19,5 +19,10 @@
   "ui.gameover.play": "PLAY",
   "ui.gameover.stats": "STATS",
   "ui.gameover.friends": "FRIENDS",
-  "ui.gameover.global": "GLOBAL"
+  "ui.gameover.global": "GLOBAL",
+  "download.checking-for-updates": "Checking for updates...",
+  "download.no-updates": "No updates found :)!",
+  "download.found-updates": "Found %s updates!",
+  "download.successful": "Successfully downloaded %s",
+  "download.error": "Error downloading %s"
 }
